--- a/src/Shipwreck.AipriDownloader/Shipwreck.AipriDownloader.csproj
+++ b/src/Shipwreck.AipriDownloader/Shipwreck.AipriDownloader.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.11.59" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Shipwreck.Aipri\Shipwreck.Aipri.csproj" />
+  </ItemGroup>
+
 </Project>
