--- a/src/Shipwreck.AipriDownloader/Shipwreck.AipriDownloader.csproj
+++ b/src/Shipwreck.AipriDownloader/Shipwreck.AipriDownloader.csproj
@@ -1,26 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<OutputType>Exe</OutputType>
-		<TargetFramework>net8.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-	</PropertyGroup>
+		<PropertyGroup>
+				<OutputType>Exe</OutputType>
+				<TargetFramework>net9.0-windows</TargetFramework>
+				<ImplicitUsings>enable</ImplicitUsings>
+				<Nullable>enable</Nullable>
+				<UseWPF>true</UseWPF>
+		</PropertyGroup>
 
-	<ItemGroup>
-		<None Include="..\..\custom\**\*.tsv" Link="custom\%(RecursiveDir)%(Filename).tsv" />
-		<None Include="..\..\custom\**\*.webp" Link="custom\%(RecursiveDir)%(Filename).webp" />
-		<None Include="..\..\custom\**\*.png" Link="custom\%(RecursiveDir)%(Filename).png" />
-		<None Include="..\..\output\**\*.webp" Link="output\%(RecursiveDir)%(Filename).webp" />
-		<None Include="..\..\output\**\*.png" Link="output\%(RecursiveDir)%(Filename).png" />
-		<None Include="..\..\output\**\*.json" Link="output\%(RecursiveDir)%(Filename).json" />
-	</ItemGroup>
-	<ItemGroup>
-		<PackageReference Include="HtmlAgilityPack" Version="1.11.71" />
-	</ItemGroup>
+		<ItemGroup>
+				<None Include="..\..\custom\**\*.tsv" Link="custom\%(RecursiveDir)%(Filename).tsv" />
+				<None Include="..\..\custom\**\*.webp" Link="custom\%(RecursiveDir)%(Filename).webp" />
+				<None Include="..\..\custom\**\*.png" Link="custom\%(RecursiveDir)%(Filename).png" />
+				<None Include="..\..\output\**\*.webp" Link="output\%(RecursiveDir)%(Filename).webp" />
+				<None Include="..\..\output\**\*.png" Link="output\%(RecursiveDir)%(Filename).png" />
+				<None Include="..\..\output\**\*.json" Link="output\%(RecursiveDir)%(Filename).json" />
+		</ItemGroup>
+		<ItemGroup>
+				<PackageReference Include="HtmlAgilityPack" Version="1.11.71" />
+				<PackageReference Include="Shipwreck.Phash.PresentationCore" Version="0.5.0" />
+		</ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\Shipwreck.Aipri\Shipwreck.Aipri.csproj" />
-	</ItemGroup>
+		<ItemGroup>
+				<ProjectReference Include="..\Shipwreck.Aipri\Shipwreck.Aipri.csproj" />
+		</ItemGroup>
 
 </Project>
